@@ -22,12 +22,36 @@ class FormatSubclass(unittest.TestCase):
             def __float__(self): return self. x
         self.assertEqual('1.0', '%.1f' % Foo(1.0))
 
+    def test_formatting_int_min_value_as_decimal(self):
+        # Test for http://bugs.jython.org/issue2672
+        x = int(-(1<<31))
+        self.assertEqual('-2147483648', '%d' % x)
+        self.assertEqual('-2147483648', '%i' % x)
+
+    def test_formatting_int_min_value_as_hex(self):
+        # Test for http://bugs.jython.org/issue2672
+        x = int(-(1<<31))
+        self.assertEqual('-80000000', '%x' % x)
+        self.assertEqual('-80000000', '%X' % x)
+
+    def test_formatting_int_min_value_as_octal(self):
+        # Test for http://bugs.jython.org/issue2672
+        x = int(-(1<<31))
+        self.assertEqual('-20000000000', '%o' % x)
+
+    def test_formatting_int_min_value_as_binary(self):
+        # Test for http://bugs.jython.org/issue2672
+        x = int(-(1<<31))
+        self.assertEqual('-10000000000000000000000000000000', '{0:b}'.format(x))
+
+
 class FormatUnicodeBase(unittest.TestCase):
 
     # Test padding non-BMP result
     def test_pad_string(self):
         self.padcheck(u"architect")
         self.padcheck(u'a\U00010001cde')
+
 
 class FormatUnicodeClassic(FormatUnicodeBase):
     # Check using %-formatting
@@ -38,6 +62,7 @@ class FormatUnicodeClassic(FormatUnicodeBase):
         self.assertEqual(u' '*6 + s[0:4], '% 10.4s' % s)
         self.assertEqual(u' '*6 + s[0:4], '%010.4s' % s)
         self.assertEqual(s[0:3] + u' '*5, '%-8.3s' % s)
+
 
 class FormatUnicodeModern(FormatUnicodeBase):
     # Check using __format__
